@startuml
'https://plantuml.com/class-diagram
hide circle

title Domain Model

class Administrator{
}
class BaseUser{
 fullName
 username
 password
 created_at
 }
class Patient {
    id
    dateOfBirth
}
class InsuranceInfo <<Value Object>> {
  policyNumber
  companyName
}
class DataConsent <<Value Object>> {
  consentGiven
  instant
}
class  Physician {
    id

}
class ContactInfo <<Value Object>> {
  email
}

class Address <<Value Object>> {
  street
  postalCode
  district
  country
}

class WorkingHours <<Value Object>> {
  startTime
  endTime
}

class mobilePhones <<Value Object>>{
    phoneNumber
}

class Appointments{
           id
           date
           time
           consultationType
           status
}

class Specialty{
    name
    acronym
    description
}
class Department{
    sigla
    nome
    descrição
}

Administrator <-- BaseUser: contém
Patient <-- BaseUser : contém
Physician <--- BaseUser: contém

Administrator "1" -- "*" Physician :  register >
Administrator "1" -- "*" Appointments :  schedule >

Patient "1  "   -- "1" InsuranceInfo : has >
Patient "1" -- "1  " DataConsent : has >

Physician "*" -- "1" Patient :  treat >

Physician "1" -- "1" ContactInfo : has >
Patient "1" -- "1" ContactInfo : has >
ContactInfo "1" -- "1"Address : contains >
ContactInfo "1" -- "1..*" mobilePhones : contains >
Physician "1" -- "1" WorkingHours :  works >
Physician "*" -- "1" Specialty : belongs >
Physician "*" -- "1" Department: belongs >




@enduml

